Added charset to work in some environments.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 
   <head>
-    <link data-require="bootstrap@*" data-semver="4.0.5" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="style.css" />
-    
+      <link crossorigin data-require="bootstrap@*" data-semver="4.0.5" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" />
+      <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -19,12 +18,12 @@
         </div>
       </div>
     </div>
-    <script data-require="jquery@*" data-semver="3.1.1" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script data-require="bootstrap@*" data-semver="4.0.5" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js"></script>
-    <script crossorigin src="https://unpkg.com/react@15/dist/react.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <script type="text/babel" src="script.js"></script>
+    <script crossorigin data-require="jquery@*" data-semver="3.1.1" charset="utf-8" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script crossorigin data-require="bootstrap@*" data-semver="4.0.5" charset="utf-8" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react@15/dist/react.js" charset="utf-8"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@15/dist/react-dom.js" charset="utf-8"></script>
+    <script crossorigin src="https://unpkg.com/babel-standalone@6/babel.min.js" charset="utf-8"></script>
+    <script type="text/babel" src="script.js" charset="utf-8"></script>
   </body>
 
 </html>
